--- a/111.html
+++ b/111.html
@@ -1,22 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <title>TEST ZhangZhen</title>
-
-</head>
-<body>
-
-<div>
-
-<p>Test ZhangZhen. This is a test website.<p>
-
-  <img src="./111.png">
-
-</div>
-
-<p>This is Zhangzhen. This is a test website. Thank you.<p>
-
-  </body>
-  </html>
+暂不开放
